# Venture-Graph

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/: config.py  llm.py  llm_factory.py  main.py  schemas.py
backend/agent/: graph.py  nodes.py  nodes_hf.py  nodes_ollama.py  parallel_nodes.py  prompts.py  state.py
backend/memory/: __init__.py  rag_memory.py
backend/tools/: firecrawl.py  github.py  hackernews.py
eval/: benchmark.py
eval/results/: benchmark_20260411_125059.json  benchmark_20260411_175427.json
frontend/: app.py
scripts/: evaluate_agent.py  test_api.py  test_graph.py  test_tools.py
