[project]
name = "venture-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "firecrawl-py>=4.22.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
